tests/ui/pattern/usefulness/issue-3601.stderr
error[E0004]: non-exhaustive patterns: `deref!(ElementKind::HTMLImageElement(_))` not covered
  --> $DIR/issue-3601.rs:30:40
   |
LL |         NodeKind::Element(ed) => match ed.kind {
   |                                        ^^^^^^^ pattern `deref!(ElementKind::HTMLImageElement(_))` not covered
   |
note: `Box<ElementKind>` defined here
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
   = note: the matched value is of type `Box<ElementKind>`
   = note: match arms with guards don't count towards exhaustivity
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~             ElementKind::HTMLImageElement(ref d) if d.image.is_some() => true,
LL ~             deref!(ElementKind::HTMLImageElement(_)) => todo!(),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
